[package]
edition           = "2024"
license.workspace = true
name              = "mmr"
version           = "0.1.0"

[dependencies]
digest = { version = "0.10.7", default-features = false }
rpds   = { version = "1.1.1", default-features = false }
serde  = { version = "1", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
blake2         = { version = "0.10.5", default-features = false }
proptest       = { version = "1.0", default-features = false, features = ["std"] }
proptest-macro = "0.2"

[lints]
workspace = true

[features]
serde = ["dep:serde", "rpds/serde"]

[package.metadata.cargo-machete]
# False positives.
ignored = ["proptest"]
