[package]
edition = { workspace = true }
license = { workspace = true }
name    = "mmr"
version = "0.1.0"

[dependencies]
ark-ff    = { default-features = false, features = ["std"], version = "0.4" }
groth16   = { features = ["deser"], workspace = true }
poseidon2 = { workspace = true }
rpds      = { default-features = false, features = ["serde"], version = "1.1.1" }
serde     = { default-features = false, features = ["derive"], version = "1" }

[dev-dependencies]
proptest       = { default-features = false, features = ["std"], version = "1.0" }
proptest-macro = "0.2"

[lints]
workspace = true

[package.metadata.cargo-machete]
# False positives.
ignored = ["proptest"]
