[package]
edition = "2021"
license = { workspace = true }
name    = "bundler"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
clap          = { version = "4.5.27", default-features = false }
env_logger    = { version = "0.11.6", default-features = false }
log           = "0.4.22"
serde_json    = { version = "1.0.135", default-features = false, features = ["std"] }
tauri-bundler = { version = "2.4.0", default-features = false }
tauri-utils   = "2.1.1"

[[bin]]
name = "bundle-nomos-node"
path = "nomos-node/bundle.rs"
