[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-c"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
nomos-node = { default-features = true, workspace = true }
overwatch  = { workspace = true }
serde_yaml = { default-features = false, workspace = true }
tokio      = { default-features = false, features = ["rt-multi-thread"], workspace = true }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib"]
name       = "libnomos"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["cbindgen"] # machete does not recognize this for build dep and complains.
