[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-libp2p"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2 = { version = "0.10" }
either = "1.13.0"
cryptarchia-sync = { workspace = true, features = ["libp2p"] }
futures = "0.3"
hex = "0.4.3"
igd-next = { version = "0.16.1", features = ["aio_tokio", "tokio"] }
libp2p = { workspace = true, features = [
  "autonat",
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "quic",
  "secp256k1",
  "tokio",
] }
multiaddr = "0.18"
natpmp = { version = "0.5", features = ["tokio"] }
nomos-utils = { workspace = true, features = ["time"] }

async-trait = "0.1.88"
rand        = "0.8"
serde       = { version = "1.0.166", features = ["derive"] }
serde_with  = { workspace = true }
thiserror   = "1.0.40"
tokio       = { version = "1", features = ["macros", "time"] }
tracing     = { workspace = true }

[dev-dependencies]
libp2p-swarm-test  = { version = "0.5.0", features = ["tokio"] }
serde_json         = "1.0.99"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
