[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-libp2p"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2 = { version = "0.10", default-features = false }
cryptarchia-sync = { workspace = true, features = ["libp2p"] }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4.3", default-features = false }
libp2p = { workspace = true, features = [
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "quic",
  "secp256k1",
  "tokio",
] }
multiaddr = { version = "0.18", default-features = false }
serde = { version = "1.0.166", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
tokio = "1"
tracing = { workspace = true }

[dev-dependencies]
serde_json = { version = "1.0.99", default-features = false }
