[package]
name = "nomos-sdp-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
async-trait   = "0.1"
blake2        = "0.10"
ed25519-dalek = "2"
multiaddr     = "0.18" 
thiserror     = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
