[package]
edition           = "2024"
license.workspace = true
name              = "nomos-sdp-core"
version           = "0.1.0"

[dependencies]
async-trait = "0.1"
base64      = "0.22"
blake2      = "0.10"
multiaddr   = "0.18"
serde       = { version = "1.0", features = ["derive"] }
thiserror   = "1"
tracing     = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
