[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-tracing"
version = "0.1.0"

[package.metadata.cargo-machete]
# False positives.
ignored = [
  # Required by `opentelemetry_otlp::new_exporter().with_http_client()`.
  "opentelemetry-http",
]

[lints]
workspace = true

[dependencies]
opentelemetry = { version = "0.26", default-features = false }
opentelemetry-http = { version = "0.26", default-features = false, features = ["reqwest"] }
opentelemetry-otlp = { version = "0.26", default-features = false, features = [
  "grpc-tonic",
  "http-proto",
  "opentelemetry-http",
] }
opentelemetry-semantic-conventions = "0.26"
opentelemetry_sdk = { version = "0.26", default-features = false, features = ["rt-tokio"] }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = "1"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-gelf = "0.7"
tracing-loki = { version = "0.2.5", default-features = false, features = ["compat-0-2-1"] }
tracing-opentelemetry = { version = "0.27", default-features = false, features = ["metrics"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "registry"] }
url = { version = "2", default-features = false, features = ["serde"] }
