[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-utils"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
blake2      = { default-features = false, version = "0.10" }
cipher      = { version = "0.4" }
const-hex   = { default-features = false, version = "1" }
humantime   = { version = "2.1" }
overwatch   = { workspace = true }
rand        = { workspace = true }
serde       = { default-features = false, features = ["alloc", "derive"], version = "1.0" }
serde_with  = { workspace = true }
time        = { default-features = false, features = ["serde-human-readable"], version = "0.3" }

[dev-dependencies]
nistrs      = "0.1.2"
rand_chacha = { default-features = false, version = "0.3" }
serde_json  = { default-features = false, features = ["alloc"], version = "1.0" }
serde_with  = { features = ["macros"], workspace = true }
