[package]
edition           = "2024"
license.workspace = true
name              = "utxotree"
version           = "0.1.0"

[dependencies]
ark-ff     = "0.4"
hex        = "0.4"
num-bigint = { version = "0.4", optional = true }
poseidon2  = { workspace = true }
rpds       = { version = "1", features = ["serde"] }
serde      = { version = "1.0", features = ["derive", "rc"], optional = true }
thiserror  = "1.0"

[dev-dependencies]
quickcheck        = "1.0"
quickcheck_macros = "1.0"

[lints]
workspace = true
