[package]
edition           = "2024"
license.workspace = true
name              = "utxotree"
version           = "0.1.0"

[dependencies]
digest    = { version = "0.10", default-features = false }
rpds      = { version = "1", default-features = false, features = ["serde"] }
serde     = { version = "1.0", default-features = false, features = ["derive", "rc"], optional = true }
thiserror = "1.0"

[dev-dependencies]
blake2            = { version = "0.10", default-features = false }
quickcheck        = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"

[lints]
workspace = true
