[package]
edition = { workspace = true }
license = { workspace = true }
name    = "wallet"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
nomos-core   = { workspace = true }
nomos-ledger = { workspace = true }
num-bigint   = { default-features = false, version = "0.4" }
rpds         = { default-features = false, version = "1.1.1" }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[features]
default = []
