[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "wallet"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
nomos-core   = { workspace = true }
nomos-ledger = { workspace = true }
num-bigint   = { default-features = false, version = "0.4" }
rpds         = { default-features = false, version = "1.1.1" }
thiserror    = { workspace = true }
tracing      = { workspace = true }
zksign       = { workspace = true }

[features]
default = []
