[package]
edition = "2021"
license = { workspace = true }
name    = "cryptarchia-engine"
version = "0.1.0"

[package.metadata.cargo-machete]
# False positives.
ignored = ["nomos-utils"]

[lints]
workspace = true

[dependencies]
cfg_eval    = { version = "0.1", optional = true }
nomos-utils = { workspace = true, features = ["time"], optional = true }
serde       = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_with  = { workspace = true, optional = true }
thiserror   = "1"
time        = { version = "0.3", default-features = false }
tokio       = { version = "1", optional = true, default-features = false, features = ["time"] }
tracing     = { workspace = true }

[features]
serde = ["dep:cfg_eval", "dep:nomos-utils", "dep:serde", "dep:serde_with"]
tokio = ["dep:tokio"]
