[package]
edition = { workspace = true }
license = { workspace = true }
name    = "cryptarchia-engine"
version = "0.1.0"

[package.metadata.cargo-machete]
# False positives.
ignored = ["nomos-utils"]

[lints]
workspace = true

[dependencies]
cfg_eval    = { optional = true, version = "0.1" }
nomos-utils = { workspace = true }
serde       = { default-features = false, version = "1.0" }
serde_with  = { features = ["macros"], workspace = true }
thiserror   = "1"
time        = { default-features = false, version = "0.3" }
tokio       = { default-features = false, features = ["time"], optional = true, version = "1" }
tracing     = { workspace = true }

[features]
tokio = ["dep:tokio"]
