[package]
edition           = "2021"
license.workspace = true
name              = "cryptarchia-sync"
version           = "0.1.0"

[dependencies]
bytes         = { workspace = true }
libp2p        = { workspace = true }
libp2p-stream = { workspace = true }
serde         = { version = "1.0", features = ["derive"] }
thiserror     = "1.0"
tokio         = { version = "1.43", features = ["rt", "sync"] }
