[package]
edition           = "2021"
license.workspace = true
name              = "cryptarchia-sync"
version           = "0.1.0"

[dependencies]
bytes              = { workspace = true }
cryptarchia-engine = { workspace = true }
futures            = { version = "0.3", default-features = false }
libp2p             = { workspace = true, optional = true }
libp2p-stream      = { workspace = true, optional = true }
nomos-core         = { workspace = true }
rand               = { workspace = true }
serde              = { version = "1", default-features = false }
serde_with         = { workspace = true }
thiserror          = "1"
tokio              = { version = "1", default-features = false }
tracing            = { version = "0.1", default-features = false }

[dev-dependencies]
libp2p            = { workspace = true, features = ["dns", "quic", "tokio"] }
libp2p-swarm-test = { version = "0.5", default-features = false }

[features]
default = []
libp2p  = ["dep:libp2p", "dep:libp2p-stream"]
