[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cryptarchia-engine     = { workspace = true }
crypto-bigint          = "0.5"
ed25519                = { version = "2.2.3", default-features = false }
nomos-core             = { workspace = true }
nomos-utils            = { workspace = true, optional = true, features = ["serde"] }
nomos_proof_statements = { workspace = true }
rand                   = { workspace = true }
rpds                   = { version = "1.1.1", default-features = false }
serde                  = { version = "1.0", features = ["derive"], optional = true }
thiserror              = "1"
utxotree               = { workspace = true }

[dev-dependencies]
ed25519-dalek = { version = "2.0.0", default-features = false }

[features]
serde = ["cryptarchia-engine/serde", "dep:nomos-utils", "dep:serde", "utxotree/serde"]
