[package]
edition = { workspace = true }
license = { workspace = true }
name    = "nomos-ledger"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
cryptarchia-engine = { workspace = true }
ed25519            = { default-features = false, version = "2.2.3" }
groth16            = { features = ["deser"], workspace = true }
mmr                = { workspace = true }
nomos-core         = { workspace = true }
nomos-utils        = { workspace = true }
num-bigint         = { version = "0.4", default-features = false }
rand               = { workspace = true }
rpds               = { default-features = false, version = "1.1.1" }
serde              = { default-features = false, features = ["derive"], version = "1.0" }
thiserror          = "1"
utxotree           = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, version = "2.0.0" }
rand          = { features = ["std", "std_rng"], workspace = true }
