[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-http-api-common"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
governor       = "0.6"
serde = { default-features = false, features = ["alloc", "derive"], version = "1.0" }
serde_with     = { workspace = true }
tower_governor = "0.3"
