[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-blend-core"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
nomos-blend-crypto     = { workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-network    = { workspace = true }
nomos-blend-proofs     = { workspace = true }
nomos-blend-scheduling = { workspace = true }

[features]
unsafe-test-functions = [
    "nomos-blend-message/unsafe-test-functions",
    "nomos-blend-network/unsafe-test-functions",
    "nomos-blend-proofs/unsafe-test-functions",
    "nomos-blend-scheduling/unsafe-test-functions",
]
