[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-message"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
blake2          = { workspace = true }
ed25519-dalek   = { version = "2", default-features = false, features = ["rand_core", "serde"] }
itertools       = { version = "0.14", default-features = false }
nomos-core      = { workspace = true }
nomos-utils     = { workspace = true, features = ["rng"] }
serde           = { version = "1", default-features = false, features = ["derive"] }
serde-big-array = "0.5"
serde_with      = { version = "3", default-features = false, features = ["macros", "std"] }
thiserror       = "1"
x25519-dalek    = { version = "2", default-features = false, features = ["serde", "static_secrets"] }

[features]
unsafe-test-functions = []
