[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-blend-message"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
blake2                     = { workspace = true }
derivative                 = { default-features = false, version = "2" }
groth16                    = { workspace = true }
hex                        = { default-features = false, version = "0.4" }
itertools                  = { default-features = false, version = "0.14" }
key-management-system-keys = { workspace = true }
nomos-blend-crypto         = { workspace = true }
nomos-blend-proofs         = { workspace = true }
nomos-core                 = { workspace = true }
nomos-utils                = { features = ["rng"], workspace = true }
serde                      = { workspace = true }
serde-big-array            = { workspace = true }
serde_with                 = { default-features = false, features = ["alloc"], version = "3" }
thiserror                  = { default-features = false, version = "1.0.69" }
tracing                    = { workspace = true }
zeroize                    = { workspace = true }

[dev-dependencies]
test-log = { default-features = false, features = ["trace"], version = "0.2" }

[features]
unsafe-test-functions = []
