[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-network"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
either                 = { version = "1.15.0", default-features = false }
futures                = { version = "0.3.30", default-features = false }
futures-timer          = { version = "3.0.3" }
libp2p                 = { workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-scheduling = { workspace = true }
nomos-libp2p           = { workspace = true }
tracing                = { workspace = true }

[dev-dependencies]
async-trait         = { version = "0.1" }
libp2p              = { workspace = true, default-features = false, features = ["ed25519", "tokio"] }
libp2p-stream       = { workspace = true }
libp2p-swarm-test   = { version = "0.5.0", default-features = false, features = ["tokio"] }
nomos-blend-message = { workspace = true, features = ["unsafe-test-functions"] }
test-log            = { version = "0.2.18", default-features = false, features = ["trace"] }
tokio               = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tokio-stream        = "0.1"

[features]
unsafe-test-functions = []
