[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-blend-network"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
either                     = { default-features = false, version = "1.15.0" }
futures                    = { default-features = false, version = "0.3.30" }
futures-timer              = { version = "3.0.3" }
key-management-system-keys = { workspace = true }
libp2p                     = { workspace = true }
nomos-blend-crypto         = { workspace = true }
nomos-blend-message        = { workspace = true }
nomos-blend-proofs         = { workspace = true }
nomos-blend-scheduling     = { workspace = true }
nomos-core                 = { workspace = true }
nomos-libp2p               = { workspace = true }
tracing                    = { workspace = true }

[dev-dependencies]
async-trait            = { version = "0.1" }
groth16                = { default-features = false, workspace = true }
libp2p                 = { default-features = false, workspace = true, features = ["plaintext", "tcp", "yamux"] }
libp2p-stream          = { workspace = true }
libp2p-swarm-test      = { default-features = false, features = ["tokio"], version = "0.5.0" }
nomos-blend-message    = { features = ["unsafe-test-functions"], workspace = true }
nomos-blend-scheduling = { features = ["unsafe-test-functions"], workspace = true }
nomos-core             = { default-features = false, workspace = true }
nomos-utils            = { workspace = true, features = ["rng"] }
test-log               = { default-features = false, version = "0.2.18" }
tokio                  = { default-features = false, version = "1" }
tokio-stream           = { default-features = false, version = "0.1" }

[features]
unsafe-test-functions = []
